Change navbar alignment and edit footer
Changed navbar's alingment when expanded to center and added
more content to footer (author info and secondary navigation).

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ header,
   min-height: 50vh;
 }
 
+footer{
+  min-height: 10vh;
+}
+
 .gradient-background {
   background: linear-gradient(
     to left top,
